--- a/amazon/src/Components/Carousel/Category/Catagory.module.css
+++ b/amazon/src/Components/Carousel/Category/Catagory.module.css
@@ -33,6 +33,11 @@
   position: relative;
   margin-top: -10%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+  max-width: 1600px;
+  gap:50px;
+  margin-right: auto;
+  margin-left: auto;
   place-items: center;
+ 
 }
