--- a/amazon/src/index.css
+++ b/amazon/src/index.css
@@ -2,9 +2,16 @@
   padding: 0;
   margin: 0;
   font-family: sans-serif;
+  box-sizing:border-box;
 }
 
 :root {
   --primary-color: #febd69;
   --primary-shade: #d49644;
 }
+/* @media screen and (max-width: 760px) {
+  *{
+    display: flex;
+    flex-direction: column;
+  }
+} */
